assets/css/style.css
#intro {
    position: sticky;
    top: 0;
    z-index: 1;
    background-image: url(../images/rob-laughter-WW1jsInXgwM-unsplash.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: right top;
    


   
}
#moviescreen {
    background-color:white;
    border-style: solid;
    border-color: black;
    border-width: 5px;
    margin: 40px auto;
    padding: 20px;
    max-width: 80%;
    width: 100%;
    


  /*  margin-left: 400px;
    margin-right: 400px;
    margin-bottom: 40px;
    margin-top: 40px;
    */
    

}


.well {
    margin-top: 0px;
    margin-bottom: 75px;
    background-color: #b60a28;
}


body {
   background-image: url(../images/dark-triangles.png);
    color: black;
    text-align: center;
}
.jumbotron {
    background-color: #b60a28;
    
}

h1,
h3 { 
    font-family: "Figtree", sans-serif;
    font-optical-sizing: auto;
    font-weight: 900;
    font-style: normal;
    color: black;
}

h2,
h5 {
    font-family: "Figtree", sans-serif;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    color: black;
}

.answer {
    font-family: "Figtree", sans-serif;
    font-optical-sizing: auto;
    font-weight: 900;
    font-style: normal;
    color: black;
}

label, input {
    display: inline-block;
}

#betteroffdead,
#breakfastclub,
#karatekid,
#beetlejuice,
#theshining,
#dirtydancing,
#princessbride,
#weirdscience,
#ferris,
#ferrisandfriends,
#duckie,
#duckie2,
#molly {
    border-width: 2px;
    border-color: black;
    border-style: solid;
}

#timeleft {
    font-size: 40px;
    font-weight: bolder;
    color: rgb(194, 37, 37);
}


#done { 
    color: white;
    background-color:rgb(182, 10, 40);
    margin-bottom: 10px;

}

